# base57

./: .gitignore  README.md
c99/: CMakeLists.txt  base57.c  base57.h  base57decode.c  base57encode.c  base57test.c  test_base57.c
java11/: pom.xml
java11/src/main/java/tech/surdacki/base57/: Constants.java  Decoder.java  Encoder.java
java11/src/test/java/tech/surdacki/base57/: Base57Tests.java  Tests.java
